<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>scout_mini_description</name>
  <version>0.1.0</version>
  <description>
    This package includes urdf files of Scout Mini
  </description>
  <maintainer email="shlee@roas.co.kr">Brighten Lee</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>urdf</depend>
  <depend>rviz2</depend>
  <depend>robot_state_publisher</depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>