<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>scout_mini_hardware</name>
  <version>0.1.0</version>
  <description>
    The hardware interface for Scout Mini
  </description>
  <maintainer email="shlee@roas.co.kr">Brighten Lee</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend> 

  <depend>rclcpp</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>realtime_tools</depend>
  <depend>std_msgs</depend>
  <depend>can_msgs</depend>
  <depend>ros2_socketcan</depend>
  <depend>ros2_socketcan_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>